# 6.141-racecar

base/direct_drive/: CMakeLists.txt  package.xml
base/direct_drive/include/: direct_drive.h
base/direct_drive/launch/: direct_drive.launch
base/direct_drive/src/: direct_drive.cpp
base/headless_racecar_sim/: base.rviz  readme.txt
base/headless_racecar_sim/headless_sim_rviz/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml  readme.md
base/headless_racecar_sim/headless_sim_rviz/scripts/: send_test_msgs.py
base/headless_racecar_sim/headless_sim_rviz/src/: drag_tool.cpp  drag_tool.h  place_tool.cpp  place_tool.h  rotate_tool.cpp  rotate_tool.h
base/headless_racecar_sim/headless_simulator/: .gitignore  CMakeLists.txt  README.md  package.xml
base/headless_racecar_sim/headless_simulator/launch/: map_server.launch  racecar_model.launch  simulate.launch  teleop.launch
base/headless_racecar_sim/headless_simulator/maps/: building_31.yaml  empty.map.yaml
base/headless_racecar_sim/headless_simulator/src/: simulate.py  utils.py
base/headless_racecar_sim/racecar_description/: CMakeLists.txt
base/racecar/racecar/config/racecar-v2/: joy_teleop.yaml  sensors.yaml  vesc.yaml
base/racecar/racecar/launch/includes/: racecar-v2-teleop.launch.xml
base/racecar/racecar/launch/includes/common/: sensors.launch.xml
base/racecar/racecar/launch/includes/racecar-v2/: static_transforms.launch.xml  vesc.launch.xml
base/sparkfun_9dof_razor_imu_m0/launch/: driver_node.launch  driver_nodelet.launch
lab2_wall_follower_sim/: params.yaml
lab2_wall_follower_sim/cfg/: base.rviz  other.rviz
lab2_wall_follower_sim/src/: wall_follower.py
lab4_visual_servoing/: CMakeLists.txt  README.md  package.xml
lab4_visual_servoing/cfg/: cone_visualization.rviz  params.yaml  zed_camera_info.yaml
lab4_visual_servoing/launch/: cone_parking.launch  line_following.launch  racecar.launch  webcam.launch
lab4_visual_servoing/src/: cone_detection.py  cone_detection_test.py  cone_detector_node.py  line_follower_node.cpp  point.py  test_images.csv  test_scores.csv  trajectory_planner.py  vehicle_controller_node.py  webcam_node.py
lab5_localization/: .gitignore  README.md
lab5_localization/cfg/: localization.rviz  localization_test.rviz  params.yaml
lab5_localization/launch/: full_simulation.launch  localize.launch  map_server.launch
lab5_localization/src/: .particle_filter.py.swp  average_error_node.py  particle_filter.py  perturbation_test.py  test.py  utils.py
lab6_motion_planning/: CMakeLists.txt  README.md  package.xml  setup.py
lab6_motion_planning/PlanningLibC/: PlanningLibC.cpp  motion_planning_tree.cpp  motion_planning_tree.hpp  occupancy_grid.cpp  occupancy_grid.hpp  point2.cpp  point2.hpp
lab6_motion_planning/cfg/: params.yaml
lab6_motion_planning/launch/: build_trajectory.launch  car_launch_all.launch  follow_trajectory.launch  launch_all.launch  load_trajectory.launch  map_server.launch  simulate.launch  waypoint_control.launch
lab6_motion_planning/maps/: basement_fixed.map.yaml
lab6_motion_planning/rviz/: search.rviz
lab6_motion_planning/src/: PlanningLibC.py  crosstrack.py  example.txt  fmt_star.py  path_planner.py  pure_pursuit.py  pure_pursuit_path.json  set_initial_pose.py  trajectory_builder.py  trajectory_loader.py  utils.py
lab6_motion_planning/test/: test_PlanningLibC.cpp  test_PlanningLibC.py
lab6_motion_planning/trajectories/: 2018-04-07-18-57-54.traj  2018-04-10-14-24-47.traj  2018-04-17-15-10-14.traj  2018-04-18-17-25-41.traj  2018-05-10-20-59-58.traj  2018-05-10-21-06-40.traj  manual.traj
localization_solution/: README.md
localization_solution/launch/: localize.launch
localization_solution/src/: particle_filter.py  utils.py
obstacle_avoidance/: CMakeLists.txt  README.md  package.xml  setup.py
obstacle_avoidance/PlanningLibC/: CMakeLists.txt
obstacle_avoidance/PlanningLibC/cfg/: clrrt_params.yaml
obstacle_avoidance/PlanningLibC/launch/: clrrt.launch  clrrt_simulate.launch  pure_pursuit.launch  republish_odom.launch
obstacle_avoidance/PlanningLibC/src/: PlanningLibC.cpp  clrrt.cpp  clrrt.hpp  clrrt_node.cpp  clrrt_node.hpp  dubins.cpp  dubins.hpp  motion_planning_tree.hpp  occupancy_grid.cpp  occupancy_grid.hpp  point2.hpp  pose3.hpp  pure_pursuit_controller.cpp  pure_pursuit_controller.hpp  pure_pursuit_node.cpp  republish_odom_node.cpp  utils.cpp  utils.hpp
obstacle_avoidance/PlanningLibC/test/: run_all_tests.cpp  test_clrrt.cpp  test_motion_planning_tree.cpp  test_occupancy_grid.cpp  test_pure_pursuit.cpp  test_utils.cpp
obstacle_avoidance/cfg/: params.yaml
obstacle_avoidance/launch/: build_trajectory.launch  car_launch_all.launch  clrrt_avoidance.launch  follow_trajectory.launch  launch_all.launch  load_trajectory.launch  map_server.launch  obstacle_map_server.launch  primitive_avoidance.launch  primitive_planner.launch  simulate.launch  waypoint_control.launch
obstacle_avoidance/maps/: basement_fixed.map.yaml  obstacle_map.yaml
obstacle_avoidance/rviz/: clrrt.rviz  primitive.rviz  search.rviz
obstacle_avoidance/src/: PlanningLibC.py  angle_tester.py  free_space_planner.py  occupancy_grid.py  path_planner.py  primitive_planner.py  pure_pursuit.py  rrt_star.py  testing.py  trajectory_loader.py  utils.py
obstacle_avoidance/test/: test_PlanningLibC.py
obstacle_avoidance/trajectories/: 2018-04-07-18-54-21.traj  2018-04-17-16-16-26.traj  obstacles_full.traj
obstacle_mapping/: CMakeLists.txt  README.md  package.xml  testing_notes
obstacle_mapping/cfg/: mapping.yaml
obstacle_mapping/launch/: base_server.launch  localize.launch  map_server.launch  obstacle_server.launch  simulate.launch
obstacle_mapping/maps/: base.map.yaml  basement_fixed.map.yaml  bikerack_base.map.yaml  bikerack_obstacle.map.yaml  dilate.py  obstacle.map.yaml
obstacle_mapping/src/: particle_filter.py  scan_processor.py  utils.py
range_libc/includes/: RangeLib.h
