<package>
  <name>headless_sim_rviz</name>
  <version>0.0.1</version>
  <description>
     RViz tools for interacting with the headless RACECAR simulator.
  </description>
  <maintainer email="chwalsh@mit.edu">Corey Walsh</maintainer>
  <license>MIT</license>

  <url>http://rayban.vision</url>
  <author>Corey Walsh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
